fixed overflow bug

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -60,6 +60,8 @@
 
 body {
   min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
   color: var(--color-text);
   background: var(--color-background);
   transition:
